Fixing CSS issues

--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>{{ .post.Title }}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet" type="text/css">
     <link href="/static/prism.css" rel="stylesheet" />
     <link href="/static/style.css" rel="stylesheet" />
     <link rel="icon" href="/static/favicon.ico">
