--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+/* Global Design */
+
 body {
     font-family: 'Roboto', serif;
     text-align: justify;
@@ -8,6 +10,16 @@ body {
     color: #444;
     padding: 0 10px;
     background-color: #FFF;
+}
+th, td {
+    border-bottom: 1px solid #ddd;
+    padding: 15px;
+}
+tr:nth-child(even) {
+    background-color: #f2f2f2
+}
+table{
+    border-collapse: collapse;
 }
 a {
     text-decoration: none;
@@ -20,22 +32,10 @@ h1, h2, h3 {
     line-height: 1.2;
     margin-top: 50px;
 }
-pre {
-    font-size: 14px;
-}
 hr {
     border: 0;
     height: 1px;
     background: grey;
-}
-code {
-    background-color: rgba(0, 0, 0, 0.04);
-    padding: 0.2em;
-    padding-left: 0.3em;
-    padding-right: 0.3em;
-    padding-top: 0.3em;
-    font-size: 14px;
-    border-radius: 0.3em;
 }
 blockquote {
     padding-left: 10px;
@@ -46,14 +46,55 @@ blockquote {
     font-style: italic;
     overflow: auto;
 }
-blockquote>p{
+blockquote>p {
     padding-right: 10px;
     margin: 0;
 }
-cite{
+cite {
     float: right;
     font-style: normal;
 }
+
+/* Code related stuff */
+
+code[class*="language-"], pre[class*="language-"] {
+    font-family: 'Roboto Mono';
+}
+pre {
+    font-family: 'Roboto Mono';
+    font-size: 14px;
+    background: #272822;
+    padding: 1em;
+    margin: .5em 0;
+    overflow: auto;
+    border-radius: 0.3em;
+}
+pre>code {
+    padding: 0;
+    padding-right: 1em;
+    color: #f8f8f2;
+    background-color: transparent;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+    text-align: left;
+    white-space: pre;
+    word-spacing: normal;
+    word-break: normal;
+    word-wrap: normal;
+    line-height: 1.5;
+}
+code {
+    font-family: 'Roboto Mono';
+    background-color: rgba(0, 0, 0, 0.04);
+    padding: 0.2em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    padding-top: 0.3em;
+    font-size: 14px;
+    border-radius: 0.3em;
+}
+
+/* Custom */
+
 .title {
     margin-bottom: 0;
     margin-top: 0;
@@ -76,7 +117,7 @@ cite{
     text-decoration: none;
     font-size: 14px;
 }
-.footerinfo{
+.footerinfo {
     text-align: center;
     margin-top: 70px;
 }
