--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -6,7 +6,7 @@
     <title>{{ if .info.Title }}{{ .info.Title }}{{ else }}Home{{ end }}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="/static/style.css" rel="stylesheet" />
-    <link rel="icon" href="/static/favicon.ico">
+    <link href="/static/grids-responsive-min.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -15,9 +15,15 @@
     {{ if .info.Title }}<h1 class="title">{{ .info.Title }}</h1>{{ end }}
     {{ if .info.Description }}<i>{{ .info.Description }}</i>{{ end }}
     </div>
-    {{ range .posts }}
-        <a href="/post/{{ .Slug }}">{{ .DateFmt }} - {{ .Title }}</a><br />
-    {{ end }}
+    <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-1-4"></div>
+        <div class="pure-u-1 pure-u-md-1-2">
+            {{ range .posts }}
+                <a href="/post/{{ .Slug }}">{{ .DateFmt }} - {{ .Title }}</a><br />
+            {{ end }}
+        </div>
+    </div>
+
 </body>
 
 </html>
