--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet" type="text/css">
     <link href="/static/prism.css" rel="stylesheet" />
+    <link href="/static/grids-responsive-min.css" rel="stylesheet" />
     <link href="/static/style.css" rel="stylesheet" />
     <link rel="icon" href="/static/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,15 +16,30 @@
 <body>
     <a href="/">← Back</a>
     <div class="head">
-        <h1 class="title">{{ .post.Title }}</h1>
-        {{ if .post.Description }}<i>{{ .post.Description }}</i>{{ end }}<br /><br />
-        {{ range .post.Tags }}<span class="tag">{{ . }}</span> {{ end }}
+        <h1 class="title">{{ .post.Title }}</h1> {{ if .post.Description }}<i>{{ .post.Description }}</i>{{ end }}
+        <br />
+        <br /> {{ range .post.Tags }}<span class="tag">{{ . }}</span>{{ end }}
     </div>
-    {{ .post.Markdown }}
-    <div class="footerinfo">
-        {{ .post.DateFmt }}{{ if .post.Author }} - {{ .post.Author }}{{ end }} - <a href="/post/{{ .post.Slug }}/raw">Raw Markdown</a>
+    <div class="pure-g">
+        <div class="pure-u-1 pure-u-md-1-4"></div>
+        <div class="pure-u-1 pure-u-md-1-2">
+            {{ .post.Markdown }}
+            <div class="footerinfo">
+                {{ .post.DateFmt }}{{ if .post.Author }} - {{ .post.Author }}{{ end }} - <a href="/post/{{ .post.Slug }}/raw">Raw Markdown</a>
+            </div>
+        </div>
     </div>
     <script src="/static/prism.js"></script>
+    <script src="/static/konami.js"></script>
+    <script>
+        var easter_egg = new Konami(function() {
+            var fileref = document.createElement("link");
+            fileref.setAttribute("rel", "stylesheet");
+            fileref.setAttribute("type", "text/css");
+            fileref.setAttribute("href", "/static/term.css");
+            document.getElementsByTagName("head")[0].appendChild(fileref)
+        });
+    </script>
 </body>
 
 </html>
