Closes #1 Centered images and table

--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="/static/style.css" rel="stylesheet" />
     <link href="/static/grids-responsive-min.css" rel="stylesheet" />
+    <link rel="icon" href="/static/favicon.gif">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
