--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -9,7 +9,7 @@
     <link href="/static/prism.css" rel="stylesheet" />
     <link href="/static/grids-responsive-min.css" rel="stylesheet" />
     <link href="/static/style.css" rel="stylesheet" />
-    <link rel="icon" href="/static/favicon.ico">
+    <link rel="icon" href="/static/favicon.gif">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
