--- a/assets/style.css
+++ b/assets/style.css
@@ -16,8 +16,16 @@ th, td {
 tr:nth-child(even) {
     background-color: #f2f2f2
 }
-table{
+table {
     border-collapse: collapse;
+    width: 100%;
+}
+img {
+    max-width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    height: auto;
+    display: block;
 }
 a {
     text-decoration: none;
@@ -114,6 +122,7 @@ pre>code {
     padding-bottom: 0.2em;
     text-decoration: none;
     font-size: 14px;
+    margin: 3px;
 }
 .footerinfo {
     text-align: center;
