--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -19,8 +19,12 @@
     <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-4"></div>
         <div class="pure-u-1 pure-u-md-1-2">
+            {{ if .extra }}<b>{{ .extra }}</b><br /><br />{{ end }}
             {{ range .posts }}
-                <a href="/post/{{ .Slug }}">{{ .DateFmt }} - {{ .Title }}</a><br />
+                    <a href="/post/{{ .Slug }}">{{ .Title }}</a><br />
+                    {{ range .Tags }}<a href="/tag/{{ . }}"><span class="home-sm-tag">{{ . }}</span></a>{{ end }}
+                    <span style="float: right;">{{ .DateFmt }}</span><br />
+                    <hr style="background: #e3e1e1;">
             {{ end }}
         </div>
     </div>
