--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -18,7 +18,7 @@
     <div class="head">
         <h1 class="title">{{ .post.Title }}</h1> {{ if .post.Description }}<i>{{ .post.Description }}</i>{{ end }}
         <br />
-        <br /> {{ range .post.Tags }}<span class="tag">{{ . }}</span>{{ end }}
+        <br /> {{ range .post.Tags }}<a href="/tag/{{ . }}"><span class="sm-tag">{{ . }}</span></a>{{ end }}
     </div>
     <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-4"></div>
