--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet" type="text/css">
     <link href="/static/grids-responsive-min.css" rel="stylesheet" />
     <link href="/static/style.css" rel="stylesheet" />
+    {{ if .gitalk.Enabled }}
     <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
+    {{ end }}
     <link rel="icon" href="/static/favicon.gif">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -27,9 +29,12 @@
             <div class="footerinfo">
                 {{ .post.DateFmt }}{{ if .post.Author }} - {{ .post.Author }}{{ end }} - <a href="/post/{{ .post.Slug }}/raw">Raw Markdown</a>
             </div>
+            {{ if .gitalk.Enabled }}
             <div id="gitalk-container"></div>
+            {{ end }}
         </div>
     </div>
+    {{ if .gitalk.Enabled }}
     <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
     <script>
         var tags = ['Gitalk']
@@ -37,18 +42,19 @@
         tags.push('{{ . }}');
         {{ end }}
         const gitalk = new Gitalk({
-            clientID: '7261e6111d20620adb79',
-            clientSecret: 'fff74aa46c0f2ad58b97fbaa19087cf4a0940654',
+            clientID: '{{ .gitalk.ClientID}}',
+            clientSecret: '{{ .gitalk.ClientSecret }}',
             id: '{{ .post.Slug }}',
-            repo: 'comments',
-            owner: 'Depado',
-            admin: ['Depado'],
+            repo: '{{ .gitalk.Repo}}',
+            owner: '{{ .gitalk.Owner }}',
+            admin: [{{ range .gitalk.Admin }}'{{ . }}',{{ end }}],
             labels: tags,
             body: "This is the comment issue for the [{{ .post.Title }}]("+location.href+") article.",
             distractionFreeMode: false
         })
         gitalk.render('gitalk-container')
     </script>
+    {{ end }}
 </body>
 
 </html>
