--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -14,8 +14,8 @@
 <body>
     {{ if .extra }}<a href="/">← Back</a>{{ end }}
     <div class="head">
-    {{ if .info.Title }}<h1 class="title">{{ .info.Title }}</h1>{{ end }}
-    {{ if .info.Description }}<i>{{ .info.Description }}</i>{{ end }}
+    {{ if .title }}<h1 class="title">{{ .title }}</h1>{{ end }}
+    {{ if .description }}<i>{{ .description }}</i>{{ end }}
     </div>
     <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-4"></div>
