--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -16,16 +16,19 @@
 </head>
 
 <body>
-    <a href="/">← Back</a>
-    <div class="head">
-        <h1 class="title">{{ .post.Title }}</h1> {{ if .post.Description }}<i>{{ .post.Description }}</i>{{ end }}
-        <br />
-        <br /> {{ range .post.Tags }}<a href="/tag/{{ . }}"><span class="sm-tag">{{ . }}</span></a>{{ end }}
-    </div>
     <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-1-4"></div>
+        <div class="pure-u-1 pure-u-md-1-4">
+            <a href="/">← Back</a>
+        </div>
         <div class="pure-u-1 pure-u-md-1-2">
-            {{ .post.Markdown }}
+            <div class="head">
+                <h1 class="title">{{ .post.Title }}</h1> <br />{{ if .post.Description }}<i>{{ .post.Description }}</i>{{ end }}
+                <br />
+                <br /> {{ range .post.Tags }}<a href="/tag/{{ . }}"><span class="sm-tag">{{ . }}</span></a>{{ end }}
+            </div>
+            <div class="md">
+                {{ .post.Markdown }}
+            </div>
             <div class="footerinfo">
                 {{ .post.DateFmt }}{{ if .post.Author }} - {{ .post.Author }}{{ end }} - <a href="/post/{{ .post.Slug }}/raw">Raw Markdown</a>
             </div>
