--- a/assets/style.css
+++ b/assets/style.css
@@ -54,9 +54,17 @@ a:hover {
     color: #444;
     text-decoration: none;
 }
+h1 {
+    margin-top: 50px;
+}
+h2 {
+    margin-top: 40px;
+}
+h3 {
+    margin-top: 30px;
+}
 h1, h2, h3 {
     line-height: 1.2;
-    margin-top: 50px;
 }
 hr {
     border: 0;
