--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -18,7 +18,13 @@
 <body>
     <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-4">
-            <a href="/">← Back</a>
+            <a href="/">← Back</a><br />
+            {{ if .post.Author }}
+            <div class="pure-g">
+                <div class="pure-u-1 pure-u-md-1-5"><img src="{{ .post.Author.Avatar }}" class="avatar"></div>
+                <div class="pure-u-1 pure-u-md-4-5">hihihi</div>
+            </div>
+            {{ end }}
         </div>
         <div class="pure-u-1 pure-u-md-1-2">
             <div class="head">
@@ -31,7 +37,7 @@
                 {{ .post.Markdown }}
             </div>
             <div class="footerinfo">
-                {{ .post.DateFmt }}{{ if .post.Author }} - {{ .post.Author }}{{ end }} - <a href="/post/{{ .post.Slug }}/raw">Raw Markdown</a>
+                {{ .post.DateFmt }} - <a href="/post/{{ .post.Slug }}/raw">Raw Markdown</a>
             </div>
             {{ if .gitalk.Enabled }}
             <div id="gitalk-container"></div>
