--- a/assets/style.css
+++ b/assets/style.css
@@ -7,22 +7,6 @@ html, button, input, select, textarea,
 .pure-g {
     display: flex;
 }
-.avatar {
-    border-radius: 50%;
-    margin: 0px;
-}
-.draft {
-    float: right;
-    color: white;
-    background-color: grey;
-    border-color: grey;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 3px;
-    padding-left: 6px;
-    padding-right: 6px;
-    font-size: 15px;
-}
 body {
     font-family: 'Roboto', serif;
     text-align: justify;
@@ -162,6 +146,9 @@ pre>code {
     margin-top: 0;
     margin-bottom: 50px;
 }
+.head img {
+    margin-top: 0;
+}
 .sm-tag {
     background: grey;
     display: inline-block;
@@ -191,4 +178,43 @@ pre>code {
 .footerinfo {
     text-align: center;
     margin-top: 70px;
+}
+.author {
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.avatar-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.author-info {
+    margin-left: 10px;
+}
+.avatar {
+    border-radius: 50%;
+    margin: 0px;
+    max-width: 50px;
+    max-width: 50px;
+}
+.backbutton {
+    border-radius: 5px;
+    border-style: solid;
+    border-width: 1px;
+}
+.draft {
+    float: right;
+    color: white;
+    background-color: grey;
+    border-color: grey;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+    padding-left: 6px;
+    padding-right: 6px;
+    font-size: 15px;
 }
