--- a/templates/author.tmpl
+++ b/templates/author.tmpl
@@ -19,3 +19,7 @@
     </div>
 </div>
 {{ end }}
+
+{{ define "author_sm" }}
+{{ if .Avatar }}<img src="{{ .Avatar }}" class="avatar-sm">{{ end }} {{ .Name }}
+{{ end }}
