--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -8,6 +8,7 @@
     <link href="/static/style.css" rel="stylesheet" />
     <link href="/static/grids-responsive-min.css" rel="stylesheet" />
     <link rel="icon" href="/static/favicon.gif">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -15,7 +16,8 @@
     {{ if .extra }}<a href="/">← Back</a>{{ end }}
     <div class="head">
     {{ if .title }}<h1 class="title">{{ .title }}</h1>{{ end }}
-    {{ if .description }}<i>{{ .description }}</i>{{ end }}
+    {{ if .description }}{{ .description }}{{ end }}
+    {{ if .author }}{{ template "author" .author }}{{ end }}
     </div>
     <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-4"></div>
