--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -19,7 +19,7 @@
 <body>
     <div class="pure-g">
         <div class="pure-u-1 pure-u-md-1-4">
-            <a href="/">Back</a>
+            <a href="/"><i class="fas fa-list-ul"></i> Home</a>
         </div>
         <div class="pure-u-1 pure-u-md-1-2">
             <div class="head">
