--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -14,6 +14,11 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <link rel="icon" href="/static/favicon.gif">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {{ if .extra_style }}
+    <style>
+        {{ .extra_style }}
+    </style>
+    {{ end }}
 </head>
 
 <body>
