--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -13,15 +13,16 @@
 </head>
 
 <body>
-    {{ if .extra }}<a href="/">← Back</a>{{ end }}
-    <div class="head">
-    {{ if .title }}<h1 class="title">{{ .title }}</h1>{{ end }}
-    {{ if .description }}{{ .description }}{{ end }}
-    {{ if .author }}{{ template "author" .author }}{{ end }}
-    </div>
     <div class="pure-g">
-        <div class="pure-u-1 pure-u-md-1-4"></div>
+        <div class="pure-u-1 pure-u-md-1-4">
+            {{ if .extra }}<a href="/"><i class="fas fa-list-ul"></i> Home</a>{{ end }}
+        </div>
         <div class="pure-u-1 pure-u-md-1-2">
+            <div class="head">
+            {{ if .title }}<h1 class="title">{{ .title }}</h1>{{ end }}
+            {{ if .description }}{{ .description }}{{ end }}
+            {{ if .author }}{{ template "author" .author }}{{ end }}
+            </div>
             {{ if .extra }}<b>{{ .extra }}</b><br /><br />{{ end }}
             {{ range .posts }}
                 <a href="/post/{{ .Slug }}">{{ .Title }}</a>{{ if .Draft }}<span class="draft">Draft</span>{{ end }}<br />
@@ -31,7 +32,6 @@
             {{ end }}
         </div>
     </div>
-
 </body>
 
 </html>
