--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -6,19 +6,15 @@
     <title>{{ .post.Title }}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet" type="text/css">
-    <link href="/static/grids-responsive-min.css" rel="stylesheet" />
     <link href="/static/style.css" rel="stylesheet" />
+    <link href="/static/grids-responsive-min.css" rel="stylesheet" />
     {{ if .gitalk.Enabled }}
     <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
     {{ end }}
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <link rel="icon" href="/static/favicon.gif">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {{ if .extra_style }}
-    <style>
-        {{ .extra_style }}
-    </style>
-    {{ end }}
+    {{ if .extra_style }}<style>{{ .extra_style }}</style>{{ end }}
 </head>
 
 <body>
@@ -31,9 +27,11 @@
                 {{ if .post.Banner }}<img src="{{ .post.Banner }}" alt="banner">{{ end }}
                 <h1 class="title">{{ .post.Title }}</h1>
                 {{ if .post.Description }}<p>{{ .post.Description }}</p>{{ end }}
-                {{ range .Tags }}{{ if not $.local }}<a href="/tag/{{ . }}">{{ end }}<span class="home-sm-tag">{{ . }}</span>{{ if not $.local }}</a>{{ end }}{{ end }}
+                {{ range .post.Tags }}
+                    {{ if not $.local }}<a href="/tag/{{ . }}">{{ end }}<span class="btn tag">{{ . }}</span>{{ if not $.local }}</a>{{ end }}
+                {{ end }}
                 {{ if .post.Author }}
-                {{ template "author" .post.Author }}
+                    {{ template "author" .post.Author }}
                 {{ end }}
             </div>
             <div class="md">
@@ -44,6 +42,13 @@
             </div>
             {{ if .gitalk.Enabled }}
             <div id="gitalk-container"></div>
+            {{ end }}
+        </div>
+        <div class="pure-u-1 pure-u-md-1-4">
+            {{ if .share }}
+            <div style="float: right;">
+                {{ template "share" .post }}
+            </div>
             {{ end }}
         </div>
     </div>
