--- a/templates/post.tmpl
+++ b/templates/post.tmpl
@@ -51,8 +51,8 @@
             </div>
             {{ end }}
             {{ if .post.Draft }}
-            <div class="btn tag" style="float: right; text-align: center;">
-                <i class="far fa-file-alt"></i> Draft Mode<br />This page is unlisted
+            <div class="btn draftinfo">
+                <b>Draft Mode</b><br />This page is unlisted
             </div>
             {{ end }}
         </div>
