--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -10,6 +10,7 @@
     <link rel="icon" href="/static/favicon.gif">
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {{ if .analytics.enabled }}{{ template "analytics" .analytics }}{{ end }}
 </head>
 
 <body>
