--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -4,11 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>{{ if .info.Title }}{{ .info.Title }}{{ else }}Home{{ end }}</title>
+    <link href="/static/grids-responsive-min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/style.min.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-    <link href="/static/style.css" rel="stylesheet" />
-    <link href="/static/grids-responsive-min.css" rel="stylesheet" />
     <link rel="icon" href="/static/favicon.gif">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {{ if .analytics.enabled }}{{ template "analytics" .analytics }}{{ end }}
 </head>
@@ -20,22 +19,39 @@
         </div>
         <div class="pure-u-1 pure-u-md-1-2">
             <div class="head">
-            {{ if .title }}<h1 class="title">{{ .title }}</h1>{{ end }}
-            {{ if .feed }}<a href="/rss"><i class="fas fa-rss"></i></a>{{ end }}
-            {{ if .description }}{{ .description }}{{ end }}
-            {{ if .author }}{{ template "author" .author }}{{ end }}
+                {{ if .title }}<h1 class="title">{{ .title }}</h1>{{ end }}
+                {{ if .feed }}<a href="/rss"><i class="fas fa-rss"></i></a>{{ end }}
+                {{ if .description }}{{ .description }}{{ end }}
+                {{ if .author }}{{ template "author" .author }}{{ end }}
             </div>
             {{ if .extra }}<b>{{ .extra }}</b><br /><br />{{ end }}
             {{ range .posts }}
-                <a href="/post/{{ .Slug }}">{{ .Title }}</a>{{ if .Draft }}<span class="draft">Draft</span>{{ end }}<br />
-                {{ range .Tags }}
-                {{ if not $.local }}<a href="/tag/{{ . }}">{{ end }}<span class="btn tag">{{ . }}</span>{{ if not $.local }}</a>{{ end }}
-                {{ end }}
-                <span style="float: right;">{{ .DateFmt }}</span><br />
-                <hr style="background: #e3e1e1;">
+            <div class="post {{ if .Draft }}draft{{ end }}">
+                <p>
+                    {{ if .Draft }}<span class="draft">Draft</span> {{ end }}<a
+                        href="/post/{{ .Slug }}">{{ .Title }}</a>
+                </p>
+                <div>
+                    {{ range .Tags }}
+                    {{ if not $.local }}
+                    <a href="/tag/{{ . }}">
+                        {{ end }}
+                        <span class="btn tag">{{ . }}</span>{{ if not $.local }}</a>{{ end }}
+                    {{ end }}
+                </div>
+            </div>
             {{ end }}
         </div>
     </div>
+    <script type="text/javascript">
+        (function () {
+            var css = document.createElement('link');
+            css.href = '/static/fa/css/all.min.css';
+            css.rel = 'stylesheet';
+            css.type = 'text/css';
+            document.getElementsByTagName('head')[0].appendChild(css);
+        })();
+    </script>
 </body>
 
 </html>
